# streamlit_persist_session_sample

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  run_main.sh  run_sample.sh
apps/main/: app.py  pyproject.toml  shared.py
apps/main/.streamlit/: config.toml
apps/main/pages/: 1_🏠_ワークスペース.py  2_📋_プロセス一覧.py  3_➕_新規プロセス.py  4_📊_詳細表示.py
apps/sample/: pyproject.toml  pyrightconfig.json  simple_app.py
scripts/: clean_data.py  setup.sh
