[project]
name = "streamlit-main-app"
version = "0.1.0"
description = "Main Streamlit application for process management"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.0.0",
    "persistence>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["*.py", "pages/*.py", ".streamlit/*"]

[tool.hatch.build]
include = ["*.py", "pages/", ".streamlit/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
persistence = { workspace = true }
