[project]
name = "streamlit-sample-app"
version = "0.1.0"
description = "Sample Streamlit application for testing persistence"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.29.0",
    "persistence>=0.1.0",
]

[tool.uv.sources]
persistence = { workspace = true }

[tool.hatch.build.targets.wheel]
only-include = ["*.py"]

[tool.hatch.build]
include = ["*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"